--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Patua+One);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 body {
-  background: #fff;
+  background: #ddd;
   height: 100%;
   margin: 0px;
   font-family: 'Open Sans', sans-serif;
@@ -123,13 +123,13 @@ nav ul {
 nav li {
   height: 20%;
   position: relative;
-  background: #222;
-  color: #fff;
+  background-image: linear-gradient(-60deg, #16a085 0%, #f4d03f 100%);
+  color: #ddd;
   font-family: "Patua One", cursive;
 }
 
 nav li:hover {
-  background: #364e41;
+  background: #364e41;      /*漢堡背景色*/
 }
 
 nav.in li:nth-child(1) {
@@ -246,11 +246,93 @@ nav.in li {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  max-width: 850px;
-  padding: 20px;
+  width: 85%;
+  max-width: 1350px;
+  padding: 0px;
   margin: 0 auto;
   margin-bottom: 150px; /* Same height as footer */
 }
+
+/**/
+.column {
+	margin: 25px 0 0 30px;
+	padding: 0;
+}
+.column:last-child {
+	padding-bottom: 60px;
+}
+.column::after {
+	content: '';
+	clear: both;
+	display: block;
+}
+.column div {
+	position: relative;
+	float: left;
+	width: 300px;
+	height: 280px;               /*調整圖片間的間距*/
+	margin-right: 30px;
+	padding: 0;
+}
+.column div:first-child {
+	margin-left: 0;
+}
+.column div span {
+	position: absolute;
+	bottom: -20px;
+	left: 0;
+	z-index: -1;
+	display: block;
+	width: 300px;
+	margin: 0;
+	padding: 0;
+	color: #444;
+	font-size: 18px;
+	text-decoration: none;
+	text-align: center;
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+	opacity: 0;
+}
+figure {
+	width: 300px;
+	height: 200px;
+  margin: 0;
+	padding: 0;
+	background: #fff;
+	overflow: hidden;
+}
+figure:hover+span {
+	bottom: 35px;   /*調整圖片下文字距離*/
+	opacity: 1;
+}
+
+/* Gray Scale */
+.hover08:before {
+  -webkit-box-shadow: 0 15px 10px #777;
+  -moz-box-shadow: 0 15px 10px #777;
+  box-shadow: 0 15px 10px #777;
+  -webkit-transform: rotate(-3deg);
+  -moz-transform: rotate(-3deg);
+  -o-transform: rotate(-3deg);
+  -ms-transform: rotate(-3deg);
+  transform: rotate(-3deg);
+}
+.hover08 figure img {
+	-webkit-filter: grayscale(100%);
+	filter: grayscale(100%);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+.hover08 figure:hover img {
+	-webkit-filter: grayscale(0);
+	filter: grayscale(0);
+}
+
+
+
+
+
 
 /* Footer */
 .fixed_footer{
@@ -260,6 +342,7 @@ nav.in li {
   background: #111;
   position: fixed; left: 0; bottom: 0;
   z-index: -100;
+  background-image: linear-gradient(to right, #a8caba 0%, #5d4157 100%);
 }
 
 .fixed_footer p{
