ver 0.6 fix title

--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ nav.in li {
 
 .header h2 {
   width: 100%;
-  color: #fff;
+  color: #ddd;
   position: absolute;
   margin: 0;
   font-family: "Patua One", cursive;
