--- a/css/style.css
+++ b/css/style.css
@@ -344,6 +344,7 @@ nav.in li {
   max-width: 1350px;
   padding: 0px;
   margin: 0 auto;
+  padding-top: 40px;
   margin-bottom: 150px; /* Same height as footer */
 }
 
