ver 1.8 member-system of store

--- a/css/store_style.css
+++ b/css/store_style.css
@@ -8,6 +8,14 @@
   background-attachment: fixed;
 }
 
+#displayname {
+  z-index: 1;
+  position: absolute;
+  width: 200px;
+  right: 10px;
+  color: #fff;
+}
+
 .glyphicon {
     margin-right: 5px;
 }
