ver 2.2 Final Maybe - 一些小修正

--- a/css/store_style.css
+++ b/css/store_style.css
@@ -12,8 +12,23 @@
   z-index: 1;
   position: absolute;
   width: 200px;
-  right: 10px;
+  top: 15px;
+  right: 35px;
+  font-size: 20px;
   color: #fff;
+}
+
+.btn-primary {
+  position: absolute;
+  left:50%;
+}
+
+.fa-user-circle-o {
+  z-index: 1;
+  color: white;
+  position: absolute;
+  top: 7px;
+  right: 75px;
 }
 
 .glyphicon {
